src/css/footer.css
.footer-main {
  background-image: url('../img/footer/footer-bg.png');
  background-repeat: no-repeat;
  background-position: right;
  padding-top: 32px;
  padding-bottom: 32px;
  margin-top: 32px;
}

.footer-head {
  display: flex;
  max-width: 100%;
  margin-bottom: 104px;
}

.footer-logo {
  max-width: 44px;
  max-height: 44px;
  border-radius: 12px;
  position: absolute;
}

.footer-header {
  font-size: 40px;
  line-height: 1;
  text-align: left;
  text-transform: uppercase;

  height: 40px;
}

.footer-work {
  color: rgb(237, 59, 68);
}

.footer-together {
  display: block;
}

.footer-form-box {
  margin-bottom: 64px;
}

.footer-form {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.footer-form input {
  padding: 0 0 20px 0;
  height: 44px;
  width: auto;
  font-size: 16px;
  background-color: transparent;
  border: 0;
  border-bottom: 1px solid rgba(250,250,250,0.2);
  color: rgb(250, 250, 250);
  -webkit-box-shadow: inset 0 0 0 50px #1c1d20;
}

#form-email:hover,
#form-email:focus {
  border-color: rgba(250, 250, 250, 0.5);
}

#form-comment {
  margin-bottom: 32px;
}

input.entered-text {
  border-bottom: 1px solid rgba(250,250,250,0.5);
}

input.success {
  border-bottom-color: rgb(60, 188, 129);
}

.footer-send {
  width: 100px;
  height: 100px;
  background-color: rgb(237, 59, 68);
  border-radius: 50px;
  border: none;
  color: rgb(250, 250, 250);

  line-height: 1.1875;
}

.footer-send:hover,
.footer-send:focus {
  background-color: rgb(224, 55, 63);
}

.footer-contacts-element {
  display: inline;
  box-sizing: border-box;
  border: 1px solid rgba(250, 250, 250, 0.2);
  border-radius: 60px;
  padding: 10px 12px;
  margin-right: 4px;
}

.footer-contacts-element:hover,
.footer-contacts-element:focus {
  border-color: rgba(250, 250, 250);
}

.contact-link {
  font-size: 14px;
  font-weight: 500;
  line-height: 1.21;
  text-align: left;
}
@media screen and (min-width: 768px) {
  .footer-main {
    padding-top: 88px;
    padding-bottom: 169px;
    margin-top: 48px;
  }

  .footer-logo {
    max-width: 70px;
    max-height: 70px;
    border-radius: 24px;
  }

  .footer-header {
    font-size: 64px;
  }

  .footer-form {
    flex-direction: row;
    gap: 32px;
    align-items: center;
  }

  .footer-form input {
    width: 245px;
  }

  #form-comment {
    margin-bottom: 0;
  }

  .footer-send {
    width: 150px;
    height: 150px;
    border-radius: 75px;
  }

  .footer-contacts-element {
    padding: 16px 32px;
    margin-right: 8px;
  }

  .contact-link {
    font-size: 16px;
    line-height: 1.19;
  }
}

@media screen and (min-width: 1440px) {
  .footer-main {
    padding-top: 80px;
    margin-top: 82px;
  }

  .footer-main > .container {
    padding-left: 196px;
    padding-right: 196px;
  }

  .footer-form input {
    width: 390px;
  }

  #form-comment {
    margin-right: 86px;
  }
}

